--- a/war/src/main/webapp/less/style.less
+++ b/war/src/main/webapp/less/style.less
@@ -993,6 +993,14 @@ td.matrix-cell {
     background: none;
 }
 
+#in-page-nav-container {
+    li.active a {
+        background-color:@linkColor;
+        color:@white;
+    }
+}
+
+
 /* == Computer table  ====================================================== */
 
 #computers td {
